--- a/src/assets/sass/common.scss
+++ b/src/assets/sass/common.scss
@@ -5,13 +5,16 @@ html, body {
   padding: 0;
   font-size: 14px;
   color: $black1;
+  overflow: hidden;
+  border-radius: 0;
+  background-color: $green1;
 }
 h3{
   margin: 0;
 }
 .page {
   background-color: aliceblue;
-  height: 450px;
+  height:75%;
   margin: 0 6px;
   border-radius: 3px;
   padding: 20px 10px;
